fix : modify return type
