# dapia_detection_api/models/__init__.py
@@ -2,7 +2,7 @@
 # import models into model package
 from dapia_detection_api.models.aircraft_types import AircraftTypes
 from dapia_detection_api.models.classify_aircrafts_request import ClassifyAircraftsRequest
-from dapia_detection_api.models.data import Data
 from dapia_detection_api.models.response200_classify_aircraft import Response200ClassifyAircraft
 from dapia_detection_api.models.response200_classify_aircraft_result_inner import Response200ClassifyAircraftResultInner
 from dapia_detection_api.models.response500_classify_aircraft import Response500ClassifyAircraft
+from dapia_detection_api.models.response500_classify_aircraft_result_inner import Response500ClassifyAircraftResultInner
