# dapia_detection_api/models/response500_classify_aircraft.py
@@ -3,10 +3,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from dapia_detection_api.models.base_model import Model
-from dapia_detection_api.models.data import Data
+from dapia_detection_api.models.response500_classify_aircraft_result_inner import Response500ClassifyAircraftResultInner
 from dapia_detection_api import util
 
-from dapia_detection_api.models.data import Data  # noqa: E501
+from dapia_detection_api.models.response500_classify_aircraft_result_inner import Response500ClassifyAircraftResultInner  # noqa: E501
 
 class Response500ClassifyAircraft(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -18,12 +18,12 @@ class Response500ClassifyAircraft(Model):
         """Response500ClassifyAircraft - a model defined in OpenAPI
 
         :param result: The result of this Response500ClassifyAircraft.  # noqa: E501
-        :type result: Data
+        :type result: List[Response500ClassifyAircraftResultInner]
         :param code: The code of this Response500ClassifyAircraft.  # noqa: E501
         :type code: int
         """
         self.openapi_types = {
-            'result': Data,
+            'result': List[Response500ClassifyAircraftResultInner],
             'code': int
         }
 
@@ -47,22 +47,22 @@ class Response500ClassifyAircraft(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def result(self) -> Data:
+    def result(self) -> List[Response500ClassifyAircraftResultInner]:
         """Gets the result of this Response500ClassifyAircraft.
 
 
         :return: The result of this Response500ClassifyAircraft.
-        :rtype: Data
+        :rtype: List[Response500ClassifyAircraftResultInner]
         """
         return self._result
 
     @result.setter
-    def result(self, result: Data):
+    def result(self, result: List[Response500ClassifyAircraftResultInner]):
         """Sets the result of this Response500ClassifyAircraft.
 
 
         :param result: The result of this Response500ClassifyAircraft.
-        :type result: Data
+        :type result: List[Response500ClassifyAircraftResultInner]
         """
 
         self._result = result
